Version 1.3.1
=============
- Added stylesheet to generate search masks from searchfields.xml

Version 1.3
===========
 - Removed the old persistence layer
 - Changed CreateDatabase to the CM8 tree only.
 - Redesign of the CM8 persitence
 - Changed search persistence to use EventHandler model.
 - Added an EventHandler for the LinkTableManager
 - Removed TypedContent construct from the datamodel classes.
 - Added MCRMetaISO8601Date as replacement for MCRMetaDate.
 - Added the new Access Controll system as replacement for the old user privilege system.
 - Built a new small user administartion system without privileges and memberships of groups.
 - Complete redesign and reimplementation of the query system.
 - Redesign of remote access. Now WebServices, OAI and Z3950 is used
 - Separated the content store from the content indexer and build it in the new search engine. 
 - Moved the IBM CM8 code to a separate uninstalled module. 
 - The remote access can serve WebService as default and has an interface for user access classes.
 - The UploadApplet uses I18N and has a configurable background color.
 - Added event handler implementation to extract technical metadata from MCRFile's content
 - Added ID3v1/ID3v2/LyricsV3 metadata extraction from MP3 files
 - Added EXIF/IPTC metadata extraction from JPEG files
 - Added metadata extraction from PDF files

Version 1.2
===========

- Implement a first model of EventHandler for the backend solutions.
- Add a character normalization for the XML:DB and JDOM backend.

Version 1.1
===========

- Added a module which will contain the editors for the user management GUI.
  The first editor for creating new users is funtional. More are upcoming.
- Add a first version of the EventHandler to reorganized the store and search
  in the persitence layers.
- Add a SimpleWorkflow module to administrate the content objects in simple 
  form
- Refactoring the commandline tool. Now the commands are all extern defined.