@@ -1,5 +1,6 @@
 Version 1.3.1
 =============
+- Editor Framework: Added input validation using XSL condition for a complete panel
 - Added stylesheet to generate search masks from searchfields.xml
 
 Version 1.3
